--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,11 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class=> @movie_title_class}
+        = link_to "Movie Titles", movies_path(:title=>'sort'), {:id=> 'title_header'}
       %th Rating
-      %th Release Date
+      %th{:class=> @release_date_class}
+        = link_to "Release Date", movies_path(:release_date=> "sort"), {:id=> 'realease_date_header'}
       %th More Info
   %tbody
     - @movies.each do |movie|
