--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,14 +1,11 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
-
 %table#movies
   %thead
     %tr
-      %th{:class=> @movie_title_class}
-        = link_to "Movie Titles", movies_path(:title=>'sort'), {:id=> 'title_header'}
+      %th{class:('hilite' if @sort_by== 'title')}= link_to 'Movie Title', movies_path(sort_by:"title"), id:"title_header"
       %th Rating
-      %th{:class=> @release_date_class}
-        = link_to "Release Date", movies_path(:release_date=> "sort"), {:id=> 'realease_date_header'}
+      %th{class:('hilite' if @sort_by== 'release_date')}= link_to 'Release Date', movies_path(sort_by:"release_date"), id:"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
